--- a/css/style.css
+++ b/css/style.css
@@ -49,9 +49,9 @@ body,h1,h2,h3{
 	color:var(--primary);
 }
 .pymes-repository__logo {
-  width: 80px;
-  height: 70px;
-  border-radius: 50%;
+  width: 125px;
+  height: 85px;
+  border-radius: 10px;
 }
 .pymes-repository__title{
 	margin:0;
