--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body,h1,h2,h3{
 	background-image: url('../puerto-gaitan-arco.jpeg');
 	background-repeat: no-repeat;
 	background-size: cover;
+	background-position: center center;
 	background-attachment: fixed;
 	display: flex;
     flex-direction: column;
