--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,15 @@ body,h1,h2,h3{
 .pymes-repository__title{
 	margin:0;
 }
+
+/* MAIN CONTENT */
+.pymes-repository__repo-files{
+	padding: 20px;
+	border: solid 1px var(--primary);
+	border-radius: 20px;
+	background-color: rgba(255, 255, 255, 0.80);
+}
+
 /* FOOTER */
 .pymes-repository__footer {
 	display: flex;
