--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ body,h1,h2,h3{
 	overflow: hidden;
 	position: sticky;
 	top: 20px;
+	z-index:100;
 }
 .pymes-repository__header {
   display: flex;
