--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@ body,h1,h2,h3{
 	display: flex;
 	flex-wrap: wrap;
 	gap:20px;
+	margin: 30px  0;
 }
 .pymes-repository__file-container{
 	display: flex;
