--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ body,h1,h2,h3{
 	position: sticky;
 	top: 20px;
 	z-index:100;
+	padding:0 20px;
 }
 .pymes-repository__header {
   display: flex;
@@ -43,6 +44,7 @@ body,h1,h2,h3{
   background-color: rgba(255, 255, 255, 0.65);
   top: 20px;
   backdrop-filter: blur(2px);
+  gap:20px;
 }
 .pymes-repository__title {
 	display: flex;
@@ -58,6 +60,7 @@ body,h1,h2,h3{
 }
 .pymes-repository__title{
 	margin:0;
+	text-align: center;
 }
 
 /* MAIN CONTENT */
@@ -92,6 +95,9 @@ body,h1,h2,h3{
 }
 
 /* FOOTER */
+.pymes-repository__footer-container{
+	padding: 0 20px;
+}
 .pymes-repository__footer {
 	display: flex;
 	justify-content: space-between;
@@ -106,4 +112,9 @@ body,h1,h2,h3{
 	top: 20px;
 	backdrop-filter: blur(2px);
 	margin-bottom:20px;
+  }
+  @media(max-width:992px){
+	.pymes-repository__header{
+		justify-content: center;
+	}
   }
