--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ body,h1,h2,h3{
     flex-direction: column;
     justify-content: space-between;
     min-height: 100vh;
+	gap:60px;
 }
 
 /* HEADER */
