--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,8 @@ body,h1,h2,h3{
 	border: solid 1px var(--primary);
 	border-radius: 20px;
 	background-color: rgba(255, 255, 255, 0.80);
+	max-width: var(--max-width);
+	margin: 0 auto;
 }
 .pymes-repository__repo-files-container{
 	display: flex;
