--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,7 @@ body,h1,h2,h3{
 	background-color: rgba(255, 255, 255, 0.80);
 	max-width: var(--max-width);
 	margin: 0 auto;
+	width:100%;
 }
 .pymes-repository__repo-files-container{
 	display: flex;
