--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,6 @@ body,h1,h2,h3{
 .pymes-repository__file-container{
 	display: flex;
 	align-items: center;
-	flex-wrap: wrap;
 	padding: 20px;
 	border: solid 1px var(--primary);
 	border-radius: 20px;
@@ -117,5 +116,8 @@ body,h1,h2,h3{
   @media(max-width:992px){
 	.pymes-repository__header{
 		justify-content: center;
+	}
+	.pymes-repository__repo-files-container{
+		flex-direction:column;
 	}
   }
