--- a/css/style.css
+++ b/css/style.css
@@ -107,12 +107,20 @@ body,h1,h2,h3{
 	max-width: var(--max-width);
 	border: solid 1px var(--primary);
 	border-radius: 20px;
-	margin:0 auto;
+	margin: 0 auto;
 	background-color: rgba(255, 255, 255, 0.65);
 	top: 20px;
 	backdrop-filter: blur(2px);
-	margin-bottom:20px;
-  }
+	margin-bottom: 20px;
+}
+.pymes-repository__footer-nit{
+	color:var(--primary);
+	font-weight:700;
+}
+.pymes-repository__footer-maynexus{
+	color:#6B238E;
+	font-weight:700;
+}
   @media(max-width:992px){
 	.pymes-repository__header{
 		justify-content: center;
