--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body,h1,h2,h3{
 }
 /* GENERAL CONTAINER*/
 .pymes-repository{
-	background-image: url('../puerto-gaitan-arco.jpeg');
+	background-image: url('../background-3.jpg');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center center;
