--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body,h1,h2,h3{
 }
 /* GENERAL CONTAINER*/
 .pymes-repository{
-	background-image: url('../bg.jpg');
+	background-image: url('../img/bg.jpg');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center center;
