--- a/css/style.css
+++ b/css/style.css
@@ -45,18 +45,19 @@ body,h1,h2,h3{
   background-color: rgba(255, 255, 255, 0.65);
   top: 20px;
   backdrop-filter: blur(2px);
-  gap:20px;
+  gap:10px;
 }
 .pymes-repository__title {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	font-weight: 700;
+	font-size: 20px;
 	color:var(--primary);
 }
 .pymes-repository__logo {
-  width: 125px;
-  height: 85px;
+  width: 80px;
+  height: 80px;
   border-radius: 10px;
 }
 .pymes-repository__title{
