--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,7 @@ body,h1,h2,h3{
 	font-weight: 700;
 	font-size: 20px;
 	color:var(--primary);
+	text-transform: capitalize;
 }
 .pymes-repository__logo {
   width: 80px;
